@@ -10,6 +10,7 @@
   * Form::RadioButton#click unchecks other buttons (RF #24159)
   * Fixed problems with Iconv (RF #24190, RF #24192, RF #24043)
   * POST parameters should be CGI escaped
+  * Made Content-Type match case insensitive (Thanks Kelly Reynolds)
 
 === 0.9.1 2009/02/23
 
